dataChannel open event, in and out channels are now one channel, pseudo chat will now only show after connected

--- a/client/index.html
+++ b/client/index.html
@@ -8,15 +8,16 @@
 	<link rel="stylesheet" href="assets/css/styles.css"></link>
 </head>
 <body>
-	<button id="disconnect">Disconnect</button>
-	<div id="channel1">
+	<div id="channelWrapper">
 		<textarea id="channelIn"></textarea>
 		<textarea id="channelOut"></textarea>
 		<button id="channelSend">Send</button>
 	</div>
 	<div id="thiskey"></div>
-	<input id="key" />
-	<button id="buttonSendKey">Set hash</button>
+	<div id="handshake">
+		<input id="key" />
+		<button id="buttonSendKey">Set hash</button>
+	</div>
 	<div id="message"></div>
 </body>
 </html>
